--- a/Maquette 2020/index.html
+++ b/Maquette 2020/index.html
@@ -52,7 +52,7 @@
     <div role="main" class="ui-content"> 
                <center>
                <div><img src="image/logo.PNG" width="" height=""/></div>
-                <h1>Recuperation ompte</h1>   
+                <h1>Recuperation compte</h1>   
                 <p>Entrez votre email</p>
                 </center>
                 <input type="email" data-clear-btn="false" name="email-1" id="email-1" value="" placeholder="Adresse email">
