--- a/Maquette 2020/index.html
+++ b/Maquette 2020/index.html
@@ -22,15 +22,15 @@
                <div><img src="image/logo.PNG"/></div>
                 <h1>Bonjour M.Dumas, faites clique<br>sur la page que vous voulez<br>voir.</h1>   
                 <h2>Voici les pages:</h2>
-                 <a class="" href="connexion.html">Page de connexion</a>
-                 <br>
-                 <a class="" href="recuperation-compte.html">Page "Recuperation compte"</a>
-                 <br>
-                 <a class="" href="formulaire-nouveau-client.html">Page "formulaire nouveau client"</a>
-                 <br>
-                 <a class="" href="Utilisateur.html">Page Utilisateur</a>
-                 <br>
-                 <a class="" href="Operateur.html">Page Operateur</a>
+                 <a href="connexion.html">Page de connexion</a>
+                 <br><br><br>
+                 <a href="recuperation-compte.html">Page "Recuperation compte"</a>
+                 <br><br><br>
+                 <a href="formulaire-nouveau-client.html">Page "formulaire nouveau client"</a>
+                 <br><br><br>
+                 <a href="Utilisateur.html">Page Utilisateur</a>
+                 <br><br><br>
+                 <a href="Operateur.html">Page Operateur</a>
                  
                   
                 </center>
