--- a/Maquette 2020/recuperation-compte.html
+++ b/Maquette 2020/recuperation-compte.html
@@ -8,20 +8,16 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-        <style type="text/css">
-        .ui-btn{
-            width: 400px;
-        }
-        .ui-input-text{
-            width: 400px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/imp3DModification.css"/>
+
+        
 </head>
 
 <body>
     <div data-role="page" id="login" style=" display: flex; flex-direction: column; justify-content: center;">
     
     <div role="main" class="ui-content" style=""> 
+              <section>
                <center>
                <div><img src="image/logo.PNG"/></div>
                <br>
@@ -35,6 +31,7 @@
                 <br>
                 <button class="ui-btn ui-btn-inline">Valider</button>
                 </center>
+                </section>
                                   
             </div><!-- /main -->
     </div>
